update installation for kazuki'e experience

--- a/Installation and setups.ipynb
+++ b/Installation and setups.ipynb
@@ -36,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conda create -n BDQ36 python=3.6 # use Anaconda to create a new Python environment called BDQ36"
+    "#conda create -n BDQ36 python=3.6 # use Anaconda to create a new Python environment called BDQ36\n",
+    "conda create -n BDQ36 python=3.6 --no-default-packages #might be better to exclude additional package, based on python 3.6 "
    ]
   },
   {
@@ -56,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conda install -c conda-forge pyfmi # install PyFMI via conda forge"
+    "#conda install -c conda-forge pyfmi # install PyFMI via conda forge\n",
+    "conda install -c conda-forge pyfmi=2.8.7 # looks better to declare the version"
    ]
   },
   {
@@ -86,7 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install scipy==1.5.3 # install scipy"
+    "#scipy should be installed with pyFMI\n",
+    "#pip install scipy==1.5.3 # install scipy"
    ]
   },
   {
@@ -97,6 +100,16 @@
    "outputs": [],
    "source": [
     "pip install dill==0.3.3 # install dill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6dbac76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conda install conda-forge::libgfortran4 #install libgfortran"
    ]
   },
   {
@@ -133,7 +146,7 @@
     "register(\n",
     "    id='emulator-v0',\n",
     "    entry_point='gym.envs.modelica:emulator',\n",
-    "    kwargs={'emulator_path':'../agents/bdq/modelica/Beehub_energy.fmu',\n",
+    "    kwargs={'emulator_path':'../bdq/modelica/Beehub_energy.fmu',\n",
     "            'occ_path':'../agents/bdq/modelica/occ.mos',\n",
     "            'plug_path':'../agents/bdq/modelica/plug.mos',\n",
     "            'lgt_path':'../agents/bdq/modelica/lights.mos',\n",
@@ -197,7 +210,7 @@
    "outputs": [],
    "source": [
     "cd \"../bdq\" # go to agent file directory\n",
-    "python offline_training.py # train the BDQ agent for 3 years weather data\n",
+    "python offline_train.py # train the BDQ agent for 3 years weather data\n",
     "python baseline_27.py # run the baseline for 1 year (2020)"
    ]
   },
